# study-llm

./: README.md
lora/daily_log_llama2/: pyproject.toml  train.py
lora/daily_log_llama2/source/: logger.py
tokenizer/: pyproject.toml  tokenizer.ipynb
